[gd_scene load_steps=5 format=3 uid="uid://cl11oggvg6vxp"]

[ext_resource type="Script" uid="uid://budkag763gr2f" path="res://levelselect.gd" id="1_vttqt"]
[ext_resource type="FontFile" uid="uid://dd41ur05wt6mc" path="res://Perfect DOS VGA 437.ttf" id="2_4kdbh"]
[ext_resource type="AudioStream" uid="uid://cvdtbfofqkj8h" path="res://assets/Boot Sequence LV 1.mp3" id="3_4kdbh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aa143"]
bg_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vttqt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 719.0
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "LVL 0x1"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "LEVEL 0x2"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "LEVEL 0x3"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "LEVEL 0x4"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "LEVEL 0x5"

[node name="Button7" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "LVL 0x6"

[node name="Button6" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_4kdbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_aa143")
text = "BACK"

[node name="Level1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4kdbh")
volume_db = 7.0
autoplay = true
parameters/looping = false
